# props

./: LICENSE  README.md  props.cabal
src/Test/: Properties.hs
test/: .doctests.hs.un~  doctests.hs
