name:                props
version:             0.1
synopsis:            Properties of functions and relations, perhaps for use with quickcheck
license:             BSD3
author:              Alec Heller
maintainer:          alec@deviant-logic.net
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Test.Properties